src/network-bindings.h

/*
 * Generated by gdbus-codegen 2.32.4. DO NOT EDIT.
 *
 * The license of this code is the same as for the source it was derived from.
 */

#ifndef __NETWORK_BINDINGS_H__
#define __NETWORK_BINDINGS_H__

#include <gio/gio.h>

G_BEGIN_DECLS


/* ------------------------------------------------------------------------ */
/* Declarations for org.manuel.LunaDHT */

#define TYPE_LUNA_DHT (luna_dht_get_type ())
#define LUNA_DHT(o) (G_TYPE_CHECK_INSTANCE_CAST ((o), TYPE_LUNA_DHT, LunaDHT))
#define IS_LUNA_DHT(o) (G_TYPE_CHECK_INSTANCE_TYPE ((o), TYPE_LUNA_DHT))
#define LUNA_DHT_GET_IFACE(o) (G_TYPE_INSTANCE_GET_INTERFACE ((o), TYPE_LUNA_DHT, LunaDHTIface))

struct _LunaDHT;
typedef struct _LunaDHT LunaDHT;
typedef struct _LunaDHTIface LunaDHTIface;

struct _LunaDHTIface
{
  GTypeInterface parent_iface;


  gboolean (*handle_get) (
    LunaDHT *object,
    GDBusMethodInvocation *invocation,
    guint arg_app_id,
    GVariant *arg_key);

  gboolean (*handle_join) (
    LunaDHT *object,
    GDBusMethodInvocation *invocation,
    const gchar *arg_host,
    guint16 arg_port);

  gboolean (*handle_put) (
    LunaDHT *object,
    GDBusMethodInvocation *invocation,
    guint arg_app_id,
    GVariant *arg_key,
    GVariant *arg_value,
    gint64 arg_ttl);

  gboolean  (*get_joined) (LunaDHT *object);

};

GType luna_dht_get_type (void) G_GNUC_CONST;

GDBusInterfaceInfo *luna_dht_interface_info (void);
guint luna_dht_override_properties (GObjectClass *klass, guint property_id_begin);


/* D-Bus method call completion functions: */
void luna_dht_complete_join (
    LunaDHT *object,
    GDBusMethodInvocation *invocation);

void luna_dht_complete_get (
    LunaDHT *object,
    GDBusMethodInvocation *invocation,
    GVariant *results);

void luna_dht_complete_put (
    LunaDHT *object,
    GDBusMethodInvocation *invocation);



/* D-Bus method calls: */
void luna_dht_call_join (
    LunaDHT *proxy,
    const gchar *arg_host,
    guint16 arg_port,
    GCancellable *cancellable,
    GAsyncReadyCallback callback,
    gpointer user_data);

gboolean luna_dht_call_join_finish (
    LunaDHT *proxy,
    GAsyncResult *res,
    GError **error);

gboolean luna_dht_call_join_sync (
    LunaDHT *proxy,
    const gchar *arg_host,
    guint16 arg_port,
    GCancellable *cancellable,
    GError **error);

void luna_dht_call_get (
    LunaDHT *proxy,
    guint arg_app_id,
    GVariant *arg_key,
    GCancellable *cancellable,
    GAsyncReadyCallback callback,
    gpointer user_data);

gboolean luna_dht_call_get_finish (
    LunaDHT *proxy,
    GVariant **out_results,
    GAsyncResult *res,
    GError **error);

gboolean luna_dht_call_get_sync (
    LunaDHT *proxy,
    guint arg_app_id,
    GVariant *arg_key,
    GVariant **out_results,
    GCancellable *cancellable,
    GError **error);

void luna_dht_call_put (
    LunaDHT *proxy,
    guint arg_app_id,
    GVariant *arg_key,
    GVariant *arg_value,
    gint64 arg_ttl,
    GCancellable *cancellable,
    GAsyncReadyCallback callback,
    gpointer user_data);

gboolean luna_dht_call_put_finish (
    LunaDHT *proxy,
    GAsyncResult *res,
    GError **error);

gboolean luna_dht_call_put_sync (
    LunaDHT *proxy,
    guint arg_app_id,
    GVariant *arg_key,
    GVariant *arg_value,
    gint64 arg_ttl,
    GCancellable *cancellable,
    GError **error);



/* D-Bus property accessors: */
gboolean luna_dht_get_joined (LunaDHT *object);
void luna_dht_set_joined (LunaDHT *object, gboolean value);


/* ---- */

#define TYPE_LUNA_DHT_PROXY (luna_dht_proxy_get_type ())
#define LUNA_DHT_PROXY(o) (G_TYPE_CHECK_INSTANCE_CAST ((o), TYPE_LUNA_DHT_PROXY, LunaDHTProxy))
#define LUNA_DHT_PROXY_CLASS(k) (G_TYPE_CHECK_CLASS_CAST ((k), TYPE_LUNA_DHT_PROXY, LunaDHTProxyClass))
#define LUNA_DHT_PROXY_GET_CLASS(o) (G_TYPE_INSTANCE_GET_CLASS ((o), TYPE_LUNA_DHT_PROXY, LunaDHTProxyClass))
#define IS_LUNA_DHT_PROXY(o) (G_TYPE_CHECK_INSTANCE_TYPE ((o), TYPE_LUNA_DHT_PROXY))
#define IS_LUNA_DHT_PROXY_CLASS(k) (G_TYPE_CHECK_CLASS_TYPE ((k), TYPE_LUNA_DHT_PROXY))

typedef struct _LunaDHTProxy LunaDHTProxy;
typedef struct _LunaDHTProxyClass LunaDHTProxyClass;
typedef struct _LunaDHTProxyPrivate LunaDHTProxyPrivate;

struct _LunaDHTProxy
{
  /*< private >*/
  GDBusProxy parent_instance;
  LunaDHTProxyPrivate *priv;
};

struct _LunaDHTProxyClass
{
  GDBusProxyClass parent_class;
};

GType luna_dht_proxy_get_type (void) G_GNUC_CONST;

void luna_dht_proxy_new (
    GDBusConnection     *connection,
    GDBusProxyFlags      flags,
    const gchar         *name,
    const gchar         *object_path,
    GCancellable        *cancellable,
    GAsyncReadyCallback  callback,
    gpointer             user_data);
LunaDHT *luna_dht_proxy_new_finish (
    GAsyncResult        *res,
    GError             **error);
LunaDHT *luna_dht_proxy_new_sync (
    GDBusConnection     *connection,
    GDBusProxyFlags      flags,
    const gchar         *name,
    const gchar         *object_path,
    GCancellable        *cancellable,
    GError             **error);

void luna_dht_proxy_new_for_bus (
    GBusType             bus_type,
    GDBusProxyFlags      flags,
    const gchar         *name,
    const gchar         *object_path,
    GCancellable        *cancellable,
    GAsyncReadyCallback  callback,
    gpointer             user_data);
LunaDHT *luna_dht_proxy_new_for_bus_finish (
    GAsyncResult        *res,
    GError             **error);
LunaDHT *luna_dht_proxy_new_for_bus_sync (
    GBusType             bus_type,
    GDBusProxyFlags      flags,
    const gchar         *name,
    const gchar         *object_path,
    GCancellable        *cancellable,
    GError             **error);


/* ---- */

#define TYPE_LUNA_DHT_SKELETON (luna_dht_skeleton_get_type ())
#define LUNA_DHT_SKELETON(o) (G_TYPE_CHECK_INSTANCE_CAST ((o), TYPE_LUNA_DHT_SKELETON, LunaDHTSkeleton))
#define LUNA_DHT_SKELETON_CLASS(k) (G_TYPE_CHECK_CLASS_CAST ((k), TYPE_LUNA_DHT_SKELETON, LunaDHTSkeletonClass))
#define LUNA_DHT_SKELETON_GET_CLASS(o) (G_TYPE_INSTANCE_GET_CLASS ((o), TYPE_LUNA_DHT_SKELETON, LunaDHTSkeletonClass))
#define IS_LUNA_DHT_SKELETON(o) (G_TYPE_CHECK_INSTANCE_TYPE ((o), TYPE_LUNA_DHT_SKELETON))
#define IS_LUNA_DHT_SKELETON_CLASS(k) (G_TYPE_CHECK_CLASS_TYPE ((k), TYPE_LUNA_DHT_SKELETON))

typedef struct _LunaDHTSkeleton LunaDHTSkeleton;
typedef struct _LunaDHTSkeletonClass LunaDHTSkeletonClass;
typedef struct _LunaDHTSkeletonPrivate LunaDHTSkeletonPrivate;

struct _LunaDHTSkeleton
{
  /*< private >*/
  GDBusInterfaceSkeleton parent_instance;
  LunaDHTSkeletonPrivate *priv;
};

struct _LunaDHTSkeletonClass
{
  GDBusInterfaceSkeletonClass parent_class;
};

GType luna_dht_skeleton_get_type (void) G_GNUC_CONST;

LunaDHT *luna_dht_skeleton_new (void);


G_END_DECLS

#endif /* __NETWORK_BINDINGS_H__ */